<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softBackgroundColor">



    <TextView
        android:id="@+id/profileEdit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:fontFamily="@font/alice"
        android:text="@string/edit_acc"
        android:textAppearance="@style/standard_text"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <ImageView
        android:id="@+id/EditIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@drawable/setting"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/logofull" />

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/softBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <ImageButton
        android:id="@+id/NotificationButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/softBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/notification_icon" />

    <TextView
        android:id="@+id/profileMenu"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:fontFamily="@font/alice"
        android:text="@string/my_account"
        android:textAppearance="@style/standard_text"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <View
        android:id="@+id/middle_view"
        android:layout_width="338dp"
        android:layout_height="475dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <View
        android:id="@+id/bottom_bar"
        android:layout_width="410dp"
        android:layout_height="88dp"
        android:background="@color/hardBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@color/hardBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/profile_icon_active" />

    <ImageButton
        android:id="@+id/cartButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@color/hardBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cart_inactive" />

    <ImageButton
        android:id="@+id/favouriteButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@color/hardBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cartButton"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/favourite_inactive" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginEnd="20dp"
        android:background="@color/hardBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/favouriteButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/home_inactive" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        app:srcCompat="@drawable/closecircle" />

    <LinearLayout
        android:layout_width="308dp"
        android:layout_height="413dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746"
        android:alpha="0.5">
        <Space
            android:layout_width="match_parent"
            android:layout_height="@string/space"
            />
        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="Name"
            android:textAppearance="@style/standard_text"
            android:background="@drawable/rounded_corner_2"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@string/space"
            />
        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/email"
            android:textAppearance="@style/standard_text"
            android:background="@drawable/rounded_corner_2"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@string/space"
            />
        <EditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/phone"
            android:textAppearance="@style/standard_text"
            android:background="@drawable/rounded_corner_2"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@string/space"
            />
        <EditText
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:text="@string/address"
            android:textAppearance="@style/standard_text"
            android:background="@drawable/rounded_corner_2"

            />
        <Space
        android:layout_width="match_parent"
        android:layout_height="@string/space"
        />
        <EditText
            android:id="@+id/city_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:inputType="text"
            android:text="City"
            android:textAppearance="@style/standard_text"
            android:background="@drawable/rounded_corner_2"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@string/space"
            />
        <EditText
            android:id="@+id/country_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@style/standard_text"
            android:text="@string/country"
            android:background="@drawable/rounded_corner_2"
            android:layout_weight="1"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@string/space"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>